--- a/template/scss/custom-css/_styles.scss
+++ b/template/scss/custom-css/_styles.scss
@@ -265,3 +265,121 @@ border: 1px solid
     }
   }
 }
+
+
+.popup_add{
+  z-index:9999;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  translate: -50% -50%;
+  background: #fff;
+  padding: 2rem;
+  width: 600px;
+  box-shadow: 0px 0px 30px rgba(0,0,0,.2);
+  border-radius: 10px;
+  strong{
+    display: block;
+    text-align: center;
+    color: #000;
+    margin: 1rem 0 0.5rem 0;
+    font-size: var(--h5);
+  }
+  b{}
+  .close{
+    position: absolute; 
+    right: 15px;
+    top: 15px;
+    height: 24px;
+    width: 24px;
+  }
+  .close:before,
+  .close:after{
+    height: 1px;
+    width: 100%;
+    rotate: 45deg;
+    background: #000;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    translate: -50% -50%;
+    content: "";
+  }
+  .close:after{rotate: -45deg;}
+  a{}
+  button{}
+  .functions{
+    a,
+    button{
+      border:1px solid;
+      font-weight: bold;
+      background: var(--primary);
+      width: 100%;
+      height: 46px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+    button{
+      background: #f2f2f2;
+      border: 0;
+      color: #666;
+    }
+  }
+  .check{
+    position: absolute;
+    left: 50%;
+    top: -25px;
+    background: #fc2792;
+    color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 55px;
+    width: 55px;
+    border-radius: 50%;
+    font-size: 22px;
+    border: 5px solid #fff;
+    box-sizing: border-box;
+    translate: -50% 0;
+    i{}
+  }
+  p{
+    display: block;
+    text-align: center;
+  }
+  .aviso{
+    text-align: center;
+    margin-bottom: 2rem;
+    width: 100%;
+    color: #fc2792;
+  }
+  .align-items-center{justify-content: center;align-items: center;}
+}
+
+.product-card__offer-stamp{
+  line-height: initial;
+  height: 44px;
+  min-width: 0!important;
+  width: 44px;
+  border-radius: 50%!important;
+  box-shadow: 0px 0px 0px 2px #000;
+  border: 1px solid #fff;
+  font-weight: bold;
+  padding: 8px;
+  font-size: 11px;
+  .i-arrow-down{display:none}
+}
+.product-card__offer-stamp:after{
+  content:"OFF";
+  display: block;
+}
+
+@media(max-width:990px){
+  .popup_add{
+    max-width: 90%;
+    .functions{
+      a{margin-top: 1rem;}
+    }
+  }
+}
