--- a/template/scss/custom-css/_styles.scss
+++ b/template/scss/custom-css/_styles.scss
@@ -320,7 +320,7 @@ border: 1px solid
       align-items: center;
       justify-content: center;
     }
-    button{
+    a{
       background: #f2f2f2;
       border: 0;
       color: #666;
@@ -352,8 +352,14 @@ border: 1px solid
     text-align: center;
     margin-bottom: 2rem;
     width: 100%;
-    color: #fc2792;
+    color: #29909F;
+    font-size: 14px;
+    max-width: 100%;
+    width: 450px;
+    margin-left: auto;
+    margin-right: auto;
   }
+  .aviso.freeShipping{color: #fc2792;font-size: 16px;}
   .align-items-center{justify-content: center;align-items: center;}
 }
 
@@ -368,6 +374,8 @@ border: 1px solid
   font-weight: bold;
   padding: 8px;
   font-size: 11px;
+  top: 10px;
+  right: 10px;
   .i-arrow-down{display:none}
 }
 .product-card__offer-stamp:after{
