--- a/template/scss/custom-css/_styles.scss
+++ b/template/scss/custom-css/_styles.scss
@@ -223,10 +223,14 @@ background-color: #000 !important;
 .products-carousel__item {
 border: 1px solid
 }
-@media (max-width: 575.98px) {
+@media (max-width: 992px) {
   #search-bar {
     display: block !important;
     transition: none;
+    height: 46px !important;
+    .header__search {
+      margin-top: .5rem;
+    }
   }
 }
 
